Revision history for {{$dist->name}}

{{$NEXT}}

0.03      2013-10-09 15:43:54 -0400
  - documentation

0.02      2013-10-09 13:57:30 -0400
  - include date and author info from cpan

0.01      2013-10-09 12:58:19 -0400
  - initial version