@@ -1,2 +1,2 @@
-/App-cpan2git-*
+/App-cpangitify-*
 /.build
