@@ -1,4 +1,4 @@
-name             = App-cpan2git
+name             = App-cpangitify
 author           = Graham Ollis <plicease@cpan.org>
 license          = Perl_5
 copyright_holder = Graham Ollis
@@ -6,7 +6,7 @@ copyright_year   = 2013
 version          = 0.03
 
 [@Author::Plicease]
-readme_from   = bin/cpan2git
+readme_from   = bin/cpangitify
 release_tests = 1
 travis_status = 1
 
