@@ -2,4 +2,4 @@ use strict;
 use warnings;
 use Test::More tests => 1;
 
-use_ok 'App::cpan2git';
+use_ok 'App::cpangitify';
